# bgpkit-parser

./: Cargo.toml
benches/: internals.rs
bgp-models/: Cargo.toml
bgp-models/src/: network.rs
bgp-models/src/bgp/: attributes.rs  elem.rs
bgp-models/src/bgp/attributes/: as_path.rs  mod.rs
bgpkit-parser-py/src/: lib.rs
bgpkit-parser/examples/: parse-files-from-broker.rs
bgpkit-parser/src/: error.rs  lib.rs
bgpkit-parser/src/parser/: iters.rs  mod.rs  utils.rs
bgpkit-parser/src/parser/bgp/: attributes.rs  messages.rs
bgpkit-parser/src/parser/mrt/: mrt_elem.rs  mrt_record.rs
bgpkit-parser/src/parser/rislive/: mod.rs
examples/: real-time-routeviews-kafka-openbmp.rs
src/: error.rs
src/models/bgp/: elem.rs
src/models/network/: prefix.rs
src/parser/: iters.rs  utils.rs
src/parser/bgp/: messages.rs
src/parser/bgp/attributes/: attr_01_origin.rs  attr_02_17_as_path.rs  attr_03_next_hop.rs  attr_04_med.rs  attr_05_local_pref.rs  attr_07_18_aggregator.rs  attr_08_communities.rs  attr_09_originator.rs  attr_10_13_cluster.rs  attr_14_15_nlri.rs  attr_16_25_extended_communities.rs  attr_32_large_communities.rs  attr_35_otc.rs  mod.rs
src/parser/bmp/: mod.rs  openbmp.rs
src/parser/bmp/messages/: headers.rs  initiation_message.rs  peer_down_notification.rs  peer_up_notification.rs  route_mirroring.rs  stats_report.rs  termination_message.rs
src/parser/mrt/: mrt_elem.rs  mrt_record.rs
src/parser/mrt/messages/: bgp4mp.rs  table_dump_message.rs  table_dump_v2_message.rs
src/parser/rislive/messages/: raw_bytes.rs
(+2 files in other folders)
